# AdventOfCodeLib

./: .gitignore  Cargo.toml  README.md  aoc.lua  init_day.sh
aoc_derive/: Cargo.toml
aoc_derive/src/: lib.rs
utils/: Cargo.toml
utils/src/: box2d.rs  graphs.rs  grid.rs  input.rs  lib.rs  math.rs  regex_helper.rs  sparse_grid.rs  vec2d.rs
utils/src/math/: box2d.rs  line1d.rs  vec2d.rs
