[package]
name = "utils"
version = "0.1.0"
authors = ["Tom Praschan <13141438+tom-anders@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.12.0"
num = "0.4.1"
parse-display = "0.8.2"
priority-queue = "1.3.2"
regex = {version = "1.10.2", features = ["pattern"]}
lazy-regex = "3.1.0"

aoc_derive.path = "../aoc_derive"

[dev-dependencies]
pretty_assertions = "1.4.0"
